--- a/index.html
+++ b/index.html
@@ -5,67 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>TEMPLATE-NYT</title>
+    <title>7part-The-Theory-of-Inflation-</title>
 </head>
 <body>
     <header>
         <nav>header</nav>
          </header>
-    <section>
-        <article>article
-            CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-        </article>
-        <div class="one">down part
-            CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
-CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.
-
-He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.
-
-If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.
-
-“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
+    <main>
+       <div class="sec">1</div>
+       <div class="sec">2</div>
+       <div class="sec">3</div>
+       <div class="sec">4</div>
+       <div class="sec">5</div>
+       <div class="sec">6</div>
+       <div class="sec"><section class="picture-8">
+        <h2 class="titul-p-8">The Theory of Inflation</h2>
+        <p class="titul-p-8">
+          Astronomers have found evidence to support the theory of inflation,
+          which explains how the universe expanded so uniformly and so quickly
+          in the instant after the Big Bang 13.8 billion years ago.
+        </p>
+        <img src="https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png" alt="g-aiImg">
+        <div class="top-line-p-8">
+          <div>
+            <p>
+              <span>THE UNIVERSE</span>is just under 14 billion years old.
+              From our position in the Milky Way galaxy, we can observe a
+              sphere that is now about 92 billion light-years across. But
+              there's a mystery. Wherever we look, the universe has an even
+              temperature.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>NOT ENOUGH TIME</span>The universe is not old enough for
+              light to have traveled the vast distance from one side of the
+              universe to the other, and there has not been enough time for
+              scattered patches of hot and cold to mix into an even
+              temperature.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>DISTANT COFFEE</span>At a smaller scale, imagine using a
+              telescope to look a mile in one direction. You see a coffee cup,
+              and from the amount of steam, you can estimate its temperature
+              and how much it has cooled.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>COFFEE EVERYWHERE</span>Now turn around and look a mile in
+              the other direction. You see a similar coffee cup, at exactly
+              the same temperature. Coincidence? Maybe. But if you see a
+              similar cup in every direction, you might want to look for
+              another explanation.
+            </p>
+          </div>
         </div>
-     </section>
+        <div class="second-line-p-8">
+          <div>
+            <p>
+              <span>STILL NOT ENOUGH TIME</span>There has not been enough time
+              to carry coffee cups from place to place before they get cold.
+              But if all the coffee cups were somehow filled from a single
+              coffee pot, all at the same time, that might explain their even
+              temperature.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>INFLATION</span>solves this problem. The theory proposes
+              that, less than a trillionth of a second after the Big Bang, the
+              universe expanded faster than the speed of light. Tiny ripples
+              in the violently expanding energy field eventually grew into the
+              large-scale structures of the universe.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>FLUCTUATION</span>Astronomers have now detected evidence
+              of these ancient fluctuations in swirls of polarized light in
+              the cosmic background radiation, which is energy left over from
+              the early universe. These are gravitational waves predicted by
+              Einstein.
+            </p>
+          </div>
+          <div>
+            <p>
+              <span>EXPANSION</span>Returning to our coffee, imagine a single,
+              central pot expanding faster than light and cooling to an even
+              temperature as it expands. That is something like inflation. And
+              the structure of the universe mirrors the froth and foam of the
+              original pot.
+            </p>
+          </div>
+        </div>
+        <hr>
+        <div class="autors-p-8 titul-p-8">
+          <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
+        </div>
+      </section></div>
+       <div class="sec">8</div>
+       <div class="sec">9</div>
+       <div class="sec">10</div>
+     </main>
      <footer>
          <div class="f1">6 columns</div>
          <div class="f2">row 13 links</div>
